# clip-it

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  run.sh
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  TESTING.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  settings.rs
src-tauri/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/storage/migrations/: 001_init.sql
ui/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  styles.css
ui/src/components/: List.tsx  Popup.tsx  Settings.tsx  icons.tsx
